# HollowElectron

./: .gitignore  CMakeLists.txt  Path.js  README.md  index.html  index.js  index_preload.js  main.js  package-lock.json  package.json
HollowElectron.xcodeproj/: project.pbxproj
HollowElectron.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
native_src/: HollowElectronNative.c
